Added dashboard update and register update with profile register

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,5 +87,12 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow: hidden;
   }
+}
+
+html,
+body,
+#__next {
+  height: 100%;
 }
